Update some code to Java 17 (#1276)